// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get all seasons Returns a full list of season data 1`] = `
Array [
  Object {
    "id": "0",
    "name": "January",
  },
  Object {
    "id": "1",
    "name": "February",
  },
]
`;

exports[`Get single season Retrieves a single season 1`] = `
Object {
  "id": "0",
  "name": "January",
}
`;

exports[`Get single season Retrieves a single season with food and recipe data 1`] = `
Object {
  "food": Array [
    Object {
      "id": "f2",
      "name": "Apple",
    },
    Object {
      "id": "f1",
      "name": "Beetroot",
    },
  ],
  "id": "1",
  "name": "February",
  "recipes": Array [
    Object {
      "id": "r1",
      "isVegan": true,
      "name": "recipe 1",
      "primaryFood": Array [
        "f1",
      ],
    },
    Object {
      "id": "r2",
      "isVegetarian": true,
      "name": "other recipe",
      "primaryFood": Array [
        "f2",
      ],
    },
  ],
}
`;
